--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.0",
+    "@angular/cdk": "^11.0.0",
     "@angular/common": "~11.0.0",
     "@angular/compiler": "~11.0.0",
     "@angular/core": "~11.0.0",
     "@angular/fire": "^6.0.5",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.0.0",
+    "@angular/material": "^11.0.0",
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
     "angular-auth-lib": "0.0.10",
     "axios": "^0.21.0",
     "firebase": "^7.24.0",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
