--- a/functions/package.json
+++ b/functions/package.json
@@ -11,7 +11,7 @@
   "engines": {
     "node": "12"
   },
-  "main": "lib/index.js",
+  "main": "src/index.ts",
   "dependencies": {
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0"
